<resources>
    <string name="app_name">Digital News</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="setting">Setting</string>
    <string name="saved">Saved</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="sample_title">Health Ministry to set up independent body to probe malpractice claims</string>
    <string name="sample_headline">The Health Ministry is to form an independent board to better protect health professionals from malpractice litigation, in line with the new Health Law.</string>
    <string name="sample_image_description">Sample Image Description</string>
    <string name="sample_news_time">1 day ago</string>
    <string name="sample_category">Society</string>
    <string name="sample_published_at">Sat, March 19, 2022</string>
    <string name="sample_post_content">The government has finally come up with a detailed strategy on how to turn the forestry and land-use sector into a carbon sink by 2030.\n\nThe strategy to achieve the target is detailed in a ministerial decree issued by Environment and Forestry Minister Siti Nurbaya Bakar in late February, seven months after Indonesia updated its pledge to cut greenhouse gas emissions with the United Nations Framework Convention on Climate Change (UNFCCC) secretariat.\n\nForestry is the nation\'s largest source of emissions, at nearly 925,000 gigagrams of carbon dioxide equivalent (Gg CO2e) in 2019 and a carbon sink is when a forest absorbs more carbon than it releases.\n\nStarting from IDR 55,500/month\n\nOr let Google manage your subscription</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hero_desciption">Let\'s read Our most updated news from various category</string>
    <string name="delete_button">delete button</string>
    <string name="saved_news">Saved News</string>
</resources>